<resources>
    <string name="app_name">Gradia</string>

    <string name="profile_image_description">사용자 프로필 사진</string>
    <string name="default_web_client_id">YOUR_WEB_CLIENT_ID_HERE</string>

    <string name="subject_type_required">전공필수</string>
    <string name="subject_type_elective">전공선택</string>
    <string name="subject_type_liberal_arts">교양</string>
    <string name="subject_type_unknown">미분류</string>

    <!-- Subject Fragment -->
    <string name="searchbar_hint">과목명 검색</string>
    <string name="searchbar_menu_icon">정렬</string>

    <!-- Subject Add AlertDialog(EveryTime) -->
    <string name="dialog_everytime_expand">시간표 url 확인 방법</string>
    <string name="dialog_everytime_contract">접기</string>
    <string name="dialog_expand_description1">시간표 탭의 오른쪽 상단의 톱니바퀴를 누릅니다.</string>
    <string name="dialog_expand_description2">아래 URL 공유를 클릭합니다.</string>
    <string name="everytime_url">시간표 URL</string>

    <!-- Subject Add FullScreenDialog -->
    <string name="appbar_title_add_subject">과목 추가</string>
    <string name="subject_credit_1">1 학점</string>
    <string name="subject_credit_2">2 학점</string>
    <string name="subject_credit_3">3 학점</string>
    <string name="subject_difficulty_unknown">잘 모르겠음</string>
    <string name="subject_difficulty_1">매우 쉬움</string>
    <string name="subject_difficulty_2">조금 쉬움</string>
    <string name="subject_difficulty_3">보통</string>
    <string name="subject_difficulty_4">조금 어려움</string>
    <string name="subject_difficulty_5">매우 어려움</string>
    <string name="subject_daily_target_study_time">일간 목표시간</string>
    <string name="subject_weekly_target_study_time">주간 목표시간</string>
    <string name="subject_monthly_target_study_time">월간 목표시간</string>
    <string name="subject_mid_term_date">중간고사 일정</string>
    <string name="subject_final_term_date">기말고사 일정</string>
    <string name="subject_mid_term_ratio">중간고사 비율</string>
    <string name="subject_final_term_ratio">기말고사 비율</string>
    <string name="subject_assignment_ratio">과제 비율</string>
    <string name="subject_quiz_ratio">퀴즈 비율</string>
    <string name="subject_attendance_ratio">출석 비율</string>
    <string name="error_subject_name_isempty">과목명을 입력해주세요.</string>

    <!-- Subject Detail Activity -->
    <string name="appbar_title_subject_detail">과목 상세 보기</string>

    <!-- Navigation Bar -->
    <string name="text_label_home">홈</string>
    <string name="text_label_subject">과목</string>
    <string name="text_label_time">기록</string>
    <string name="text_label_analysis">분석</string>

    <!-- Session Statistical Dialog Fragment -->
    <string name="appbar_title_session_statistical_data">세션 통계 데이터</string>
    <string name="total_focus_time">전체 집중 시간</string>
    <string name="most_focus_subject">가장 집중한 과목</string>
    <string name="most_focus_time">가장 집중한 기간</string>
    <string name="data_session_review">사용자 집중 통계</string>
    <string name="session_distribution_ratio">일일 세션 통계</string>
    <string name="daily_target_time">일일 목표 시간</string>
    <string name="weekly_target_time">주간 목표 시간</string>
    <string name="monthly_target_time">월간 목표 시간</string>

    <!-- Session Add Dialog Fragment -->
    <string name="appbar_title_add_session">세션 추가</string>
    <string name="appbar_title_edit_session">세션 수정</string>
    <string name="dropdown_select_subject">과목</string>
    <string name="date_picker">날짜</string>
    <string name="start_time_picker">시작 시간</string>
    <string name="end_time_picker">종료 시간</string>
    <string name="duration_picker">기간</string>
    <string name="session_memo">기록</string>
    <string name="session_memo_hint">이번 세션에서 무엇을 공부했나요?</string>
    <string name="btn_session_save">세션 저장하기</string>
    <!--<string name="error_session_start_time_isemtpy"></string>-->

    <!-- Session Review -->
    <string name="session_review">세션의 집중도를 간단하게 표현해주세요!</string>
    <string name="session_review_focus_level1">산만했어:(</string>
    <string name="session_review_focus_level2">그럭저럭..</string>
    <string name="session_review_focus_level3">좋았어 :)</string>
    <string name="session_review_focus_level4">초집중!!!</string>

    <!-- Time Fragment -->
    <!-- Timeline Calendar WeeklyView -->
    <string name="weekly_calendar_item1">월</string>
    <string name="weekly_calendar_item2">화</string>
    <string name="weekly_calendar_item3">수</string>
    <string name="weekly_calendar_item4">목</string>
    <string name="weekly_calendar_item5">금</string>
    <string name="weekly_calendar_item6">토</string>
    <string name="weekly_calendar_item7">일</string>

    <!-- Toast Message -->
    <string name="toast_message_no_subjects">현재 추가된 과목이 없습니다. 과목을 추가해주세요.</string>
    <string name="toast_message_invalid_time">날짜 또는 시간이 입력되었는지 확인해주세요.</string>
    <string name="toast_message_invalid_session">다른 세션과 시간이 겹칩니다. 시간을 확인해주세요.</string>
    <string name="toast_message_session_saved">세션이 저장되었습니다.</string>
    <string name="toast_message_session_deleted">세션이 삭제되었습니다.</string>
    <!-- FAB -->
    <string name="text_label_add_session_fab">세션 추가</string>

    <!-- FAB expanded menu -->
    <string name="fab_expanded_menu_item1">타이머</string>
    <string name="fab_expanded_menu_item2">스탑워치</string>
    <string name="fab_expanded_menu_item3">직접 추가</string>

    <!-- Button -->
    <string name="btn_session_start">세션을 시작합니다</string>

    <!-- Toggle Button -->
    <string name="text_label_toggle_record">기록</string>
    <string name="text_label_toggle_timeline">타임라인</string>

    <!-- Bottom Sheet -->
    <string name="text_label_bottom_sheet">과목</string>
    <string name="text_label_subject_target_hour">일일 목표 시간</string>
    <string name="text_label_subject_studied_hour">공부 시간</string>
    <string name="text_label_subject_type">이수 구분</string>
    <string name="text_label_subject_credit">학점</string>
    <string name="text_label_subject_edit">수정</string>

    <!-- Greeting Messages -->
    <string-array name="text_label_study_greeting_messages">
        <item>무엇에 집중하실건가요?</item>
        <item>지금 이 순간, 천천히 집중해보세요</item>
        <item>작은 기록이 큰 변화를 만듭니다</item>
        <item>공부는 천천히, 그러나 꾸준히</item>
        <item>이 시간을 소중히 기록해 드릴게요</item>
        <item>당신의 속도로, 당신만의 방향으로</item>
        <item>방해는 잠시 멈추고, 나만의 시간을 채워보세요</item>
        <item>불안해하지 마세요. 한 걸음씩 가면 됩니다</item>
        <item>어제보다 나은 오늘을 위해, 천천히 시작해볼까요?</item>
    </string-array>

    <string name="google_web_client_id">637824960431-fo6ev723vd5u0pmqm4m17r79icm5ugc1.apps.googleusercontent.com</string>
    <string name="kakao_web_client_id">kakao0ae3bc452c369df08a11b5fd073d3df9</string>


    <!--tutorial-->
    <string name="tutorial_title_home">홈</string>
    <string name="tutorial_title_subject">과목</string>
    <string name="tutorial_title_record">기록</string>
    <string name="tutorial_title_analysis">분석</string>
    <string name="tutorial_title_default">기능 안내</string>

    <string name="tutorial_desc_home">홈 화면에서 주요 정보와 알림을 확인하세요</string>
    <string name="tutorial_desc_subject">과목 탭에서 학습 과목을 추가 및 관리할 수 있습니다 \n\n각 과목 탭을 클릭해 세부 정보를 확인하고 필요한 과목을 직접 추가하거나 에브리타임에서 불러와 보세요!</string>
    <string name="tutorial_desc_record">기록 탭에서 다양한 기록 도구와 학습 이력을 확인하세요 \n\n타임라인과 "세션 통계 데이터 보기"를 통해 오늘의 학습을 되돌아 보세요!</string>
    <string name="tutorial_desc_analysis">분석 탭에서 목표달성량과 주간 학습시간을 보고 공부계획에 반영해보세요\n\n"성적예측하기"를 통해 현재 공부 상태를 확인하고 피드백을 받아보는 건 어떨까요?\n\n\n 이제 Gradia와 함께 시작해볼 시간이예요!</string>
    <string name="tutorial_desc_default">Gradia와 함께 시작해보세요! .</string>

    <string name="tutorial_skip">건너뛰기</string>
    <string name="tutorial_next">다음</string>


</resources>