<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/color_circle"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:background="@drawable/color_circle" />

        <TextView
            android:id="@+id/subject_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:text="모바일 프로그래밍"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/expand_img_btn"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:src="@drawable/outline_expand_more_black_24" />

    </LinearLayout>
    <GridLayout
        android:id="@+id/layout_expand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4">

        <TextView
            style="@style/subject_expand_item"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/text_label_subject_studied_hour"
            android:textStyle="bold" />

        <TextView
            style="@style/subject_expand_item"
            android:layout_row="0"
            android:layout_column="1"
            android:text="@string/text_label_subject_target_hour"
            android:textStyle="bold" />

        <TextView
            style="@style/subject_expand_item"
            android:layout_row="0"
            android:layout_column="3"
            android:text="@string/text_label_subject_credit"
            android:textStyle="bold" />

        <TextView
            style="@style/subject_expand_item"
            android:layout_row="0"
            android:layout_column="2"
            android:text="@string/text_label_subject_type"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/study_time"
            style="@style/subject_expand_item"
            android:layout_row="1"
            android:layout_column="0"
            android:text="0 시간"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/target_study_time"
            style="@style/subject_expand_item"
            android:layout_row="1"
            android:layout_column="1"
            android:text="0 시간"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/subject_type"
            style="@style/subject_expand_item"
            android:layout_row="1"
            android:layout_column="2"
            android:text="전필"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/subject_credit"
            style="@style/subject_expand_item"
            android:layout_row="1"
            android:layout_column="3"
            android:text="3 학점"
            android:textSize="16sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_gravity="fill_horizontal"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:text="버튼"
            android:textColor="@color/c6"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="3"
            android:layout_gravity="fill_horizontal"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:text="버튼"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </GridLayout>
    <!--
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="2dp">

    </androidx.cardview.widget.CardView>
    -->
</LinearLayout>
