<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/schedule_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:overScrollMode="never">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:text="에브리타임 시간표 - 톱니바퀴 - URL 공유로 시간표 링크를 복사해주세요." />

        <LinearLayout
            android:id="@+id/expand_layout_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/expand_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="15dp"
                android:text="@string/dialog_everytime_expand"
                android:textSize="12sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/expand_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:src="@drawable/ic_expand_more" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/expand_content_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dialog_expand_description1" />

            <ImageView
                android:id="@+id/img1"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_margin="15dp"
                android:src="@drawable/everytime_1" />

            <ImageView
                android:id="@+id/down_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:src="@drawable/outline_arrow_downward_black_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dialog_expand_description2" />

            <ImageView
                android:id="@+id/img2"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_margin="15dp"
                android:src="@drawable/everytime_2" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/everytime_url_textinput"
            style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/everytime_url"
            app:errorEnabled="true"
            app:errorTextColor="@color/red"
            app:boxStrokeErrorColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/everytime_url_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:inputType="textUri" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</ScrollView>